--- a/symbiosis_analysis.Rmd
+++ b/symbiosis_analysis.Rmd
@@ -6,7 +6,7 @@ output:
   html_document:
     fig_caption: yes
     number_sections: yes
-    theme: cerulean
+    theme: readable
     toc: yes
     toc_float: yes
   pdf_document:
@@ -67,7 +67,6 @@ The symbiosis between Sphagnum mosses and cyanobacteria has long been recognized
 
 ```{r, warning = FALSE, message = FALSE}
 library(tidyverse)
-library(dplyr)
 #knitr by default will set the working directory to the source file location
 #setwd("~/Documents/Manuscripts:data/Symbiosis_study_2018")
 dat1 <- read_csv("fallax_cyano_symbiosis_colleen_10_01_2018.csv") %>% mutate(delta_weight = delta_weight_g *1000)
